# Time-to-Collision

./: CMakeLists.txt  README.md  package.xml
bags/: 2026-01-14-20-59-14.bag  2026-01-14-21-00-03.bag  2026-01-19-14-58-59.bag  2026-01-22-15-16-02.bag  2026-01-22-15-38-20.bag
config/: param.yaml
launch/: carla_simulator.launch  ttc_calculator.launch
rviz/: ttc.rviz
scripts/: carla_rospub.py  combine.py  ttc.py  two_cars.py  vehicle_position.py
src/: ttc_calculator copy 2.cpp  ttc_calculator copy.cpp  ttc_calculator.cpp  ttc_multiple_dirving_direction_in_x_y.cpp  ttc_visualizer.cpp
